--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ gitplugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.sonarqube' version '4.4.1.3373' 
 }
 
 group = 'co.edu.uniajc'
