--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,4 +1,4 @@
-name: SonarCloud
+name: CI - Build, Test, Coverage, SonarCloud
 
 on:
   push:
@@ -8,42 +8,59 @@ on:
 
 jobs:
   build:
-    name: Build and Analyze
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
+
+    env:
+      SPRING_PROFILES_ACTIVE: test
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          # SonarCloud necesita el historial para análisis de PR/Branch
           fetch-depth: 0
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: '17'
-          distribution: 'temurin'
+          cache: gradle
 
       - name: Cache SonarCloud packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v3
+      - name: Gradle - version info
+        run: ./gradlew -version
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
+
+      # Ejecuta tests con stacktrace y logs detallados
+      - name: Build & Test (with reports)
+        run: ./gradlew clean build jacocoTestReport --stacktrace --info
+
+      # Subir SIEMPRE los reportes de test para ver el fallo exacto
+      - name: Upload unit-test report (HTML)
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle
-          restore-keys: ${{ runner.os }}-gradle
+          name: test-report
+          path: build/reports/tests/test
 
-      - name: Dar permisos de ejecución al Gradle Wrapper
-        run: |
-          chmod +x gradlew
-          ./gradlew clean build test jacocoTestReport sonar --info
+      - name: Upload JaCoCo report (HTML)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: build/reports/jacoco/test/html
 
-      - name: Build and analyze with SonarCloud
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonarqube --info
+      - name: SonarCloud analysis
+        run: ./gradlew sonar --stacktrace --info
